--- a/views/center/specialCoconut/specialCoconutEdit.ejs
+++ b/views/center/specialCoconut/specialCoconutEdit.ejs
@@ -23,13 +23,28 @@
                                         <span></span>
                                     </div>
 
-                                        
+                                    
                                     <div class="form-group">
-                                        <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
+                                        <label for="currentMonth" class="col-md-3 control-label">মাসের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" value="<%= records.center %>">
+                                            <select id="currentMonth" name="currentMonth" value="<%= records.currentMonth %>">
+                                                <!-- <option value="">Choose Month</option> -->
+                                                <option value="January">জানুয়ারি</option>
+                                                <option value="February">ফেব্রুয়ারি</option>
+                                                <option value="March">মার্চ</option>
+                                                <option value="April">এপ্রিল</option>
+                                                <option value="May">মে</option>
+                                                <option value="June">জুন</option>
+                                                <option value="July">জুলাই</option>
+                                                <option value="August">আগস্ট</option>
+                                                <option value="September">সেপ্টেম্বর</option>
+                                                <option value="October">অক্টোবর</option>
+                                                <option value="November">নভেম্বর</option>
+                                                <option value="December">ডিসেম্বর</option>
+                                            </select>
                                         </div>
                                     </div>
+
                                     
                                     <div class="form-group">
                                         <label for="boraddo" class="col-md-3 control-label">মোট বরাদ্দকৃত অর্থের পরিমাণ</label>
