--- a/views/pd/specialCoconut/specialCoconutForm.ejs
+++ b/views/pd/specialCoconut/specialCoconutForm.ejs
@@ -25,9 +25,23 @@
 
                                         
                                     <div class="form-group">
-                                        <label for="center" class="col-md-3 control-label">সেন্টারের নাম</label>
+                                        <label for="currentMonth" class="col-md-3 control-label">মাসের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="center" placeholder="সেন্টারের নাম">
+                                            <select id="currentMonth" name="currentMonth">
+                                                <option value="">Choose Month</option>
+                                                <option value="January">জানুয়ারি</option>
+                                                <option value="February">ফেব্রুয়ারি</option>
+                                                <option value="March">মার্চ</option>
+                                                <option value="April">এপ্রিল</option>
+                                                <option value="May">মে</option>
+                                                <option value="June">জুন</option>
+                                                <option value="July">জুলাই</option>
+                                                <option value="August">আগস্ট</option>
+                                                <option value="September">সেপ্টেম্বর</option>
+                                                <option value="October">অক্টোবর</option>
+                                                <option value="November">নভেম্বর</option>
+                                                <option value="December">ডিসেম্বর</option>
+                                            </select>
                                         </div>
                                     </div>
                                     
