--- a/views/pd/revolvingFund/revolvingFundForm.ejs
+++ b/views/pd/revolvingFund/revolvingFundForm.ejs
@@ -23,7 +23,27 @@
                                         <span></span>
                                     </div>
 
-                                        
+                                    <div class="form-group">
+                                        <label for="currentMonth" class="col-md-3 control-label">মাসের নাম</label>
+                                        <div class="col-md-9">
+                                            <select id="currentMonth" name="currentMonth">
+                                                <option value="">Choose Month</option>
+                                                <option value="January">জানুয়ারি</option>
+                                                <option value="February">ফেব্রুয়ারি</option>
+                                                <option value="March">মার্চ</option>
+                                                <option value="April">এপ্রিল</option>
+                                                <option value="May">মে</option>
+                                                <option value="June">জুন</option>
+                                                <option value="July">জুলাই</option>
+                                                <option value="August">আগস্ট</option>
+                                                <option value="September">সেপ্টেম্বর</option>
+                                                <option value="October">অক্টোবর</option>
+                                                <option value="November">নভেম্বর</option>
+                                                <option value="December">ডিসেম্বর</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    
                                     <div class="form-group">
                                         <label for="prapti" class="col-md-3 control-label">অর্থ প্রাপ্তি HDDA তে জমা</label>
                                         <div class="col-md-9">
