--- a/views/pd/loan/loanTable.ejs
+++ b/views/pd/loan/loanTable.ejs
@@ -2,6 +2,7 @@
     <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
+        <th>মাসের নাম</th>
         <th>ঋণ বাবদ বরাদ্দ অর্থ</th>
         <th>বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</th>
         <th>বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
@@ -15,6 +16,7 @@
     <tbody>
         <% records.forEach(function(row){ %>
             <tr>
+                <td><%= row.currentMonth %></td>
                 <td><%= row.boraddo %></td>
                 <td><%= row.bitoron1 %></td>
                 <td><%= row.aday1 %></td>
@@ -32,6 +34,7 @@
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
+            <th>মাসের নাম</th>
             <th>ঋণ বাবদ বরাদ্দ অর্থ</th>
             <th>বিগত অর্থবছরে বিতরণকৃত অর্থের পরিমাণ</th>
             <th>বিগত অর্থবছরে আদায়কৃত টাকার পরিমাণ</th>
