months in specialCoconut, loan, revolving fund converted to bangla

--- a/views/center/loan/loanEdit.ejs
+++ b/views/center/loan/loanEdit.ejs
@@ -34,18 +34,18 @@
                                         <label for="currentMonth" class="col-md-3 control-label">মাসের নাম</label>
                                         <div class="col-md-9">
                                             <select id="currentMonth" name="currentMonth">
-                                                <option value="January">জানুয়ারি</option>
-                                                <option value="February">ফেব্রুয়ারি</option>
-                                                <option value="March">মার্চ</option>
-                                                <option value="April">এপ্রিল</option>
-                                                <option value="May">মে</option>
-                                                <option value="June">জুন</option>
-                                                <option value="July">জুলাই</option>
-                                                <option value="August">আগস্ট</option>
-                                                <option value="September">সেপ্টেম্বর</option>
-                                                <option value="October">অক্টোবর</option>
-                                                <option value="November">নভেম্বর</option>
-                                                <option value="December">ডিসেম্বর</option>
+                                                <option value="জানুয়ারি">জানুয়ারি</option>
+                                                <option value="ফেব্রুয়ারি">ফেব্রুয়ারি</option>
+                                                <option value="মার্চ">মার্চ</option>
+                                                <option value="এপ্রিল">এপ্রিল</option>
+                                                <option value="মে">মে</option>
+                                                <option value="জুন">জুন</option>
+                                                <option value="জুলাই">জুলাই</option>
+                                                <option value="আগস্ট">আগস্ট</option>
+                                                <option value="সেপ্টেম্বর">সেপ্টেম্বর</option>
+                                                <option value="অক্টোবর">অক্টোবর</option>
+                                                <option value="নভেম্বর">নভেম্বর</option>
+                                                <option value="ডিসেম্বর">ডিসেম্বর</option>
                                             </select>
                                         </div>
                                     </div>
