--- a/views/pd/specialCoconut/specialCoconut.ejs
+++ b/views/pd/specialCoconut/specialCoconut.ejs
@@ -31,6 +31,15 @@
                                     <option value="2021">২০২১-২২</option>
                                     <option value="2022">২০২২-২৩</option>
                                     <option value="2023">২০২৩-২৪</option>
+                                    <option value="2024">২০২৪-২৫</option>
+                                    <option value="2025">২০২৫-২৬</option>
+                                    <option value="2026">২০২৬-২৭</option>
+                                    <option value="2027">২০২৭-২৮</option>
+                                    <option value="2028">২০২৮-২৯</option>
+                                    <option value="2029">২০২৯-৩০</option>
+                                    <option value="2030">২০৩০-৩১</option>
+                                    <option value="2031">২০৩১-৩২</option>
+                                    <option value="2032">২০৩২-৩৩</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
