--- a/views/pd/revolvingFund/revolvingFundTable.ejs
+++ b/views/pd/revolvingFund/revolvingFundTable.ejs
@@ -21,6 +21,7 @@
         <th>চারা/কলম বিতরণ(সংখ্যায়) (মৃত/অবিক্রয়যোগ্য সংখ্যা(মোট))</th>
         <th>মোট বিতরণ (বিক্রি/মৃত)</th>
         <th>নীট মজুদ</th>
+        <th>পরিবর্তন/মুছুন</th>
     </tr>
     </thead>
     <tbody>
@@ -45,7 +46,9 @@
                 <td><%= row.bitoronDead %></td>
                 <td><%= row.bitoronTotal %></td>
                 <td><%= row.totalMojud %></td>
-                
+                <td><a class="btn btn-primary btn-xs" href="/pd/revolvingFundEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/revolvingFundDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                </td>
             </tr>
         <% }) %>
     </tbody>
@@ -73,6 +76,7 @@
             <th>চারা/কলম বিতরণ(সংখ্যায়) (মৃত/অবিক্রয়যোগ্য সংখ্যা(মোট))</th>
             <th>মোট বিতরণ (বিক্রি/মৃত)</th>
             <th>নীট মজুদ</th>
+            <th>পরিবর্তন/মুছুন</th>
         </tr>
         </thead>
         <tbody>
