report header fixed and title added in few places

--- a/views/pd/employee/chak2/pdfAll.ejs
+++ b/views/pd/employee/chak2/pdfAll.ejs
@@ -74,6 +74,7 @@
           <img src="/images/bd.png" width="100" alt="bd">
         </div>
       </div>
+      <h4>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</h4>
       <div style="
             display: flex;
             flex-direction: row;
