--- a/views/pd/expense/pdf.ejs
+++ b/views/pd/expense/pdf.ejs
@@ -74,6 +74,7 @@
           <img src="/images/dae.jpg" width="100" alt="dae">
         </div>
       </div>
+      <h3>খরচের (বি-স্টেটমেন্ট) হিসাব বিবরণী</h3>
       <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
       <div style="
             display: flex;
