--- a/views/pd/employee/chak1/pdfAll.ejs
+++ b/views/pd/employee/chak1/pdfAll.ejs
@@ -74,6 +74,7 @@
           <img src="/images/bd.png" width="100" alt="bd">
         </div>
       </div>
+      <h2>ক্যাডার/নন ক্যাডার কর্মকর্তার/কর্মচারীদের নাম ও পদবী সহ শূন্য পদের তথ্য</h2>
       <div style="
             display: flex;
             flex-direction: row;
