--- a/views/pd/employee/chak2/pdf.ejs
+++ b/views/pd/employee/chak2/pdf.ejs
@@ -74,6 +74,7 @@
           <img src="/images/bd.png" width="100" alt="bd">
         </div>
       </div>
+      <h4>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</h4>
       <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
       <div style="
             display: flex;
