--- a/views/pd/topSheet/bitoron/pdf.ejs
+++ b/views/pd/topSheet/bitoron/pdf.ejs
@@ -63,7 +63,7 @@
     <div>
       <div class="header">
         <div>
-          <img src="/images/dae.jpg" width="100" alt="dae">
+          <img src="/images/bd.png" width="100" alt="bd">
         </div>
         <div class="flex-container">
           <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
@@ -71,9 +71,10 @@
           <h5>হর্টিকালচার উইং</h5>
         </div>
         <div>
-          <img src="/images/bd.png" width="100" alt="bd">
+          <img src="/images/dae.jpg" width="100" alt="dae">
         </div>
       </div>
+      <h1>মাসিক টপশীট (বিতরণ)</h1>
       <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
       <div style="
             display: flex;
