--- a/views/pd/worker/workerNum/pdfAll.ejs
+++ b/views/pd/worker/workerNum/pdfAll.ejs
@@ -56,6 +56,7 @@
       width: 50%;
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 </head>
 
 <body>
@@ -75,7 +76,6 @@
         </div>
       </div>
       <div>
-        <p><b>সেন্টারের নাম :</b><%= centerName %></p>
       </div>
       <div style="
             display: flex;
@@ -84,9 +84,6 @@
             justify-content: space-between;
           ">
         <p>স্মারক নংঃ</p>
-        <div>
-          <p><b> তারিখ : </b><%= moment(selectedDate).locale("bn").format("MM/YYYY") %></p>
-        </div>
       </div>
       <h1>শ্রমিকের সংখ্যা</h1>
       <p><b>সেন্টার :</b>সকল সেন্টারের তথ্য</p>
