--- a/views/pd/expense/pdfAll.ejs
+++ b/views/pd/expense/pdfAll.ejs
@@ -74,6 +74,7 @@
           <img src="/images/dae.jpg" width="100" alt="dae">
         </div>
       </div>
+      <h3>খরচের (বি-স্টেটমেন্ট) হিসাব বিবরণী</h3>
       <div style="
             display: flex;
             flex-direction: row;
