--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -51,10 +51,10 @@
 
           <div class="nav-lavel">কর্মকতা/কর্মচারীদের ডাটাবেজ</div>
           <div class="nav-item">
-            <a href="/pd/chak1"><i class="ik ik-package"></i><span>কর্মকতা/কর্মচারীদের তথ্য</span></a>
+            <a href="/pd/chak1"><i class="ik ik-package"></i><span>কর্মকর্তা/কর্মচারীদের তথ্য</span></a>
           </div>
           <div class="nav-item">
-            <a href="/pd/chak2"><i class="ik ik-box"></i><span>কর্মকতা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
+            <a href="/pd/chak2"><i class="ik ik-box"></i><span>কর্মকর্তা/কর্মচারীদের <br>পদের সংখ্যা</span></a>
           </div>
 
           <div class="nav-lavel">শ্রমিকদের ডাটাবেজ</div>
