--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -49,7 +49,7 @@
           </div>
 
 
-          <div class="nav-lavel">কর্মকতা/কর্মচারীদের ডাটাবেজ</div>
+          <div class="nav-lavel">কর্মকর্তা/কর্মচারীদের ডাটাবেজ</div>
           <div class="nav-item">
             <a href="/pd/chak1"><i class="ik ik-package"></i><span>কর্মকর্তা/কর্মচারীদের তথ্য</span></a>
           </div>
